Add testing utilities to reset fields for garbage collection Nullify test classes after they have completed. Testing out a theory if this will reduce memory usage